--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "write-heading-ids": "docusaurus write-heading-ids"
   },
   "dependencies": {
-    "@docusaurus/core": "3.0.1",
-    "@docusaurus/preset-classic": "3.0.1",
+    "@docusaurus/core": "^3.2.1",
+    "@docusaurus/preset-classic": "^3.2.1",
     "@easyops-cn/docusaurus-search-local": "^0.38.1",
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.3",
@@ -33,8 +33,8 @@
     "sass": "^1.69.5"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "3.0.1",
-    "@docusaurus/types": "3.0.1",
+    "@docusaurus/module-type-aliases": "^3.2.1",
+    "@docusaurus/types": "^3.2.1",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
     "postcss-loader": "^8.1.1",
