--- a/.github/workflows/deploy-to-github-pages.yml
+++ b/.github/workflows/deploy-to-github-pages.yml
@@ -15,11 +15,20 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Install and Build website
-        run: |
-          npm ci
-          npm run build
+      - name: Setup node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 21
+          cache: npm
 
+      - name: Install dependencies
+        run: |
+          npm install
+
+      - name: Build website
+        run: |
+          npm run build
+          
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
         with:
