--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
   "dependencies": {
     "@docusaurus/core": "^3.2.1",
     "@docusaurus/preset-classic": "^3.2.1",
-    "@easyops-cn/docusaurus-search-local": "^0.38.1",
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.3",
     "@mdx-js/react": "^3.0.0",
     "ace-builds": "^1.32.0",
     "clsx": "^2.0.0",
+    "docusaurus-lunr-search": "^3.3.2",
     "docusaurus-plugin-sass": "^0.2.5",
     "prism-react-renderer": "^2.3.0",
     "react": "^18.0.0",
