--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@heroicons/react": "^2.1.3",
     "@mdx-js/react": "^3.0.0",
     "ace-builds": "^1.32.0",
-    "clsx": "^2.0.0",
+    "axios": "^1.6.8",
+    "clsx": "^2.1.0",
     "docusaurus-lunr-search": "^3.3.2",
     "docusaurus-plugin-sass": "^0.2.5",
     "prism-react-renderer": "^2.3.0",
