--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "write-heading-ids": "docusaurus write-heading-ids"
   },
   "dependencies": {
-    "@docusaurus/core": "^3.5.2",
-    "@docusaurus/preset-classic": "^3.5.2",
+    "@docusaurus/core": "^3.6.1",
+    "@docusaurus/preset-classic": "^3.6.1",
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.3",
     "@mdx-js/react": "^3.0.0",
-    "ace-builds": "^1.36.3",
+    "ace-builds": "^1.36.4",
     "axios": "^1.6.8",
     "clsx": "^2.1.0",
     "docusaurus-lunr-search": "^3.3.2",
@@ -31,11 +31,12 @@
     "react-py": "^1.10.6",
     "rehype-katex": "^7.0.0",
     "remark-math": "^6.0.0",
-    "sass": "^1.69.5"
+    "sass": "^1.69.5",
+    "webpack": "^5.96.1"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "^3.5.2",
-    "@docusaurus/types": "^3.5.2",
+    "@docusaurus/module-type-aliases": "^3.6.1",
+    "@docusaurus/types": "^3.6.1",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
     "postcss-loader": "^8.1.1",
